Added links for other subjects

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <select id="medium" name = "medium"   style="font-size:30px"  onchange="selectMedium();" >
             <option value = "Choose" selected >Choose</option>
             <option value = "Kannada">Kannada</option>
-            <!-- <option value = "English" >English</option> -->
+            <option value = "English" >English</option>
         </select>
 
 
@@ -87,13 +87,9 @@
             <option value = "Social Science" >Social Science</option>
             <option value = "Maths">Maths</option>
             <option value = "Science">Science</option>
-
-            <!--  
-
             <option value = "Kannada">Kannada</option>
             <option value = "English">English</option>
             <option value = "Sanskrit">Sanskrit</option>
-            -->
         </select>
 
             </div>
@@ -169,11 +165,11 @@
                                         "sheet":'1t6xbmlmyPajMzuZ1grEA4JSPz-p-Cv8N8KeX8jh4xsw',
                                         "tab":"10"
                                         },
-                                        "Kannada": {
+                                        "English": {
                                         "sheet":'1t6xbmlmyPajMzuZ1grEA4JSPz-p-Cv8N8KeX8jh4xsw',
                                         "tab":"11"
                                         },
-                                        "English": {
+                                        "Kannada": {
                                         "sheet":'1t6xbmlmyPajMzuZ1grEA4JSPz-p-Cv8N8KeX8jh4xsw',
                                         "tab":"12"
                                         },
